Reduced talky message content of JScdExceptions.